VAR: Bumped version of Zod because of vulnerability

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.3.0",
     "contentful": "^10.6.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.3"
   }
 }
